--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
         "moduleResolution": "node",
         "declaration": true,
         "declarationDir": "types",
-        "noUnusedLocals": false,
-        "noUnusedParameters": false,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
         "allowJs": false
     },
     "formatCodeOptions": {
